// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schema > should hide table / sequences without problems 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> tab1ok
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> tab2ok
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> tab3missing
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> tab4ok
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> tab5ok
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> seq1ok someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> seq2ok someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> seq3missing
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label> someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> seq4ok someType 55
  </li>
</ul>
"
`;

exports[`Schema > should hide table / sequences without problems 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button> tab1ok ...
    tab2ok <small>(2)</small>
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> tab3missing
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button> tab4ok ...
    tab5ok <small>(2)</small>
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> seq1ok ... seq2ok
    <small>(2)</small>
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> seq3missing
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label> someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> seq4ok
  </li>
</ul>
"
`;

exports[`Schema > should join ALTER TABLE statements on the same table 1`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn1Name\\" string",
</li>
<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn2Name\\" string",
</li>
<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn3Name\\" string",
</li>
"
`;

exports[`Schema > should join ALTER TABLE statements on the same table 2`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn1Name\\" string," +
</li>
<li class="more svelte-1ns5wom">"ADD COLUMN \\"myColumn2Name\\" string," +</li>
<li class="more svelte-1ns5wom">"ADD COLUMN \\"myColumn3Name\\" string",</li>
"
`;

exports[`Schema > should patches encoded for java 1`] = `
"<li class="svelte-1ns5wom">"CREATE TABLE \\"myTable1Name\\"",</li>
"
`;

exports[`Schema > should patches encoded for java 2`] = `
"<li class="svelte-1ns5wom">CREATE TABLE "myTable1Name";</li>
"
`;

exports[`Schema > should render a column with a wrong type 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />adjust columns with type mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a column with a wrong type 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />adjust columns with type mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myColumn1Name
        <span class="red svelte-1ns5wom">type mismatch</span>
        <label><input type="checkbox" />adjust</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a column with a wrong type 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />adjust columns with type mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">-</button> myColumn1Name
        <span class="red svelte-1ns5wom">type mismatch:</span>
        <label><input type="checkbox" />adjust</label>
        <table class="comparison svelte-1ns5wom">
          <tbody>
            <tr>
              <td class="svelte-1ns5wom">required:</td>
              <td class="svelte-1ns5wom">myColumn1Type</td>
            </tr>
            <tr>
              <td class="svelte-1ns5wom">actual:</td>
              <td class="svelte-1ns5wom">myColumn1TypeX</td>
            </tr>
          </tbody>
        </table>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a column with a wrong type 4`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE myTable1Name ALTER myColumn1Name TYPE myColumn1Type",
</li>
"
`;

exports[`Schema > should render a column with an additional error 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a column with an additional error 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myColumn1Name
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a column with an additional error 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">-</button> myColumn1Name
        myColumn1Type
        <ul>
          <li class="svelte-1ns5wom">additionalErrors1</li>
          <li class="svelte-1ns5wom">additionalErrors2</li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a connect button 1`] = `
"<button>connect</button>
"
`;

exports[`Schema > should render a connect button 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a connect button 3`] = `
"<li class="svelte-1ns5wom">"CREATE TABLE myTable1Name",</li>
"
`;

exports[`Schema > should render a constraint with a wrong clause 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with a wrong clause 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet red svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">check</span> myConstraint1Name
        <span class="red svelte-1ns5wom">clause mismatch:</span>
        <label><input type="checkbox" />recreate</label>
        <table class="comparison svelte-1ns5wom">
          <tbody>
            <tr>
              <td class="svelte-1ns5wom">required:</td>
              <td class="svelte-1ns5wom">myConstraint1Clause</td>
            </tr>
            <tr>
              <td class="svelte-1ns5wom">actual:</td>
              <td class="svelte-1ns5wom">myConstraint1ClauseX</td>
            </tr>
            <tr>
              <td class="svelte-1ns5wom">raw:</td>
              <td class="svelte-1ns5wom">myConstraint1ClauseX Raw</td>
            </tr>
          </tbody>
        </table>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with a wrong clause 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE myTable1Name DROP CONSTRAINT myConstraint1Name",
</li>
<li class="svelte-1ns5wom">
  "ALTER TABLE myTable1Name ADD CONSTRAINT myConstraint1Name",
</li>
"
`;

exports[`Schema > should render a constraint with an additional error 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with an additional error 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet red svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">check</span> myConstraint1Name
        myConstraint1Clause
        <ul>
          <li class="svelte-1ns5wom">additionalErrors1</li>
          <li class="svelte-1ns5wom">additionalErrors2</li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with shortener 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with shortener 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myColumn1Name
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with shortener 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">-</button> myColumn1Name
        myColumn1Type
        <ul>
          <li class="svelte-1ns5wom">
            <button disabled="" class="bullet red svelte-1ns5wom">.</button>
            <span class="nodeType svelte-1ns5wom">check</span> myConstraint1Name
            <span class="red svelte-1ns5wom">clause mismatch:</span>
            <label><input type="checkbox" />recreate</label>
            <table class="comparison svelte-1ns5wom">
              <tbody>
                <tr>
                  <td class="svelte-1ns5wom">required:</td>
                  <td class="svelte-1ns5wom">(⬁) myConstraint1Clause</td>
                </tr>
                <tr>
                  <td class="svelte-1ns5wom">actual:</td>
                  <td class="svelte-1ns5wom">(⬁) myConstraint1ClauseX</td>
                </tr>
                <tr>
                  <td class="svelte-1ns5wom">raw:</td>
                  <td class="svelte-1ns5wom">(⬁) myConstraint1ClauseX Raw</td>
                </tr>
              </tbody>
            </table>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a minimal sequence 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myOnlyName myType 55
  </li>
</ul>
"
`;

exports[`Schema > should render a minimal table 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> myOnlyName
  </li>
</ul>
"
`;

exports[`Schema > should render a minimal table 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">-</button> myOnlyName
  </li>
</ul>
"
`;

exports[`Schema > should render a minimal table 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">-</button> myOnlyName
  </li>
</ul>
"
`;

exports[`Schema > should render a minimal table 4`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> myOnlyNameReloaded
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myColumn1Name
        <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">-</button> myColumn1Name
        <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label> myColumn1Type
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 4`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE myTable1Name ADD COLUMN myColumn1Name",
</li>
"
`;

exports[`Schema > should render a missing column to be renamed to a unused 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTableName
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myMissingColumnName
        <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte-1ns5wom">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
            <option value="myUnusedColumnName2">myUnusedColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myUnusedColumnName
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte-1ns5wom">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myUnusedColumnName2
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte-1ns5wom">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column to be renamed to a unused 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTableName
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myMissingColumnName
        <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte-1ns5wom">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
            <option value="myUnusedColumnName2">myUnusedColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myUnusedColumnName
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte-1ns5wom">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myUnusedColumnName2
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte-1ns5wom">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column to be renamed to a unused 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myTableName\\" ALTER COLUMN \\"myUnusedColumnName\\" RENAME TO
  \\"myMissingColumnName\\"",
</li>
"
`;

exports[`Schema > should render a missing constraint 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a missing constraint 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet red svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">check</span> myConstraint1Name
        <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label> myConstraint1Clause
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing constraint 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE myTable1Name ADD CONSTRAINT myConstraint1Name",
</li>
"
`;

exports[`Schema > should render a missing sequence 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myOnlyName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label> myType 55
  </li>
</ul>
"
`;

exports[`Schema > should render a missing sequence 2`] = `
"<li class="svelte-1ns5wom">"CREATE SEQUENCE myOnlyName",</li>
"
`;

exports[`Schema > should render a missing sequence to be renamed to an unused 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myMissingSequenceName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
        <option value="myUnusedSequenceName2">myUnusedSequenceName2</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myUnusedSequenceName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myUnusedSequenceName2
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType 55
  </li>
</ul>
"
`;

exports[`Schema > should render a missing sequence to be renamed to an unused 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myMissingSequenceName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
        <option value="myUnusedSequenceName2">myUnusedSequenceName2</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myUnusedSequenceName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myUnusedSequenceName2
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType 55
  </li>
</ul>
"
`;

exports[`Schema > should render a missing sequence to be renamed to an unused 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myUnusedSequenceName\\" RENAME TO \\"myMissingSequenceName\\"",
</li>
"
`;

exports[`Schema > should render a missing table 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table 3`] = `
"<li class="svelte-1ns5wom">"CREATE TABLE myTable1Name",</li>
"
`;

exports[`Schema > should render a missing table and patch fails 1`] = `
"<li class="svelte-1ns5wom">
  <span class="red svelte-1ns5wom"
    >schema/alter?subject=table&amp;name=myTable1Name&amp;method=add: response
    code 400 myError</span
  >
</li>
"
`;

exports[`Schema > should render a missing table to be renamed to an unused 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myMissingTableName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
        <option value="myUnusedTableName2">myUnusedTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myUnusedTableName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myUnusedTableName2
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table to be renamed to an unused 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myMissingTableName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
        <option value="myUnusedTableName2">myUnusedTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myUnusedTableName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myUnusedTableName2
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table to be renamed to an unused 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myUnusedTableName\\" RENAME TO \\"myMissingTableName\\"",
</li>
"
`;

exports[`Schema > should render a multiple columns with a wrong type 1`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 2`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 3`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 4`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 5`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 6`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 7`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 1`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 2`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 3`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 4`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 5`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 6`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 7`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a normal table with constraints 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table with constraints 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet svelte-1ns5wom">+</button> myColumn1Name
      </li>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">pk</span> myTable1Constraint1Name
      </li>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">pk</span>
        ~constraintTildeNameTable
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table with constraints 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet svelte-1ns5wom">-</button> myColumn1Name
        myColumn1Type
        <ul>
          <li class="svelte-1ns5wom">
            <button disabled="" class="bullet svelte-1ns5wom">.</button>
            <span class="nodeType svelte-1ns5wom">pk</span>
            myColumn1Constraint1Name
          </li>
          <li class="svelte-1ns5wom">
            <button disabled="" class="bullet svelte-1ns5wom">.</button>
            <span class="nodeType svelte-1ns5wom">check</span>
            myColumn1Constraint2Name myColumn1Constraint2Clause
          </li>
          <li class="svelte-1ns5wom">
            <button disabled="" class="bullet svelte-1ns5wom">.</button>
            <span class="nodeType svelte-1ns5wom">pk</span>
            ~ConstraintTildeNameColumn
          </li>
          <li class="svelte-1ns5wom">
            <button disabled="" class="bullet svelte-1ns5wom">.</button>
            <span class="nodeType svelte-1ns5wom">check</span>
            myColumn1ConstraintArrowName myColumn1ConstraintArrowClause hsqldb:⬁
            mysql:⬁
          </li>
        </ul>
      </li>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">pk</span> myTable1Constraint1Name
      </li>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">pk</span>
        ~constraintTildeNameTable
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table without constraints 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table without constraints 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet svelte-1ns5wom">+</button> myColumn1Name
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table without constraints 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet svelte-1ns5wom">-</button> myColumn1Name
        myColumn1Type
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a sequence with an additional error 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myOnlyName myType 55
    <ul>
      <li class="svelte-1ns5wom">additionalErrors1</li>
      <li class="svelte-1ns5wom">additionalErrors2</li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a sequence with wrong start 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myOnlyName myType
    <span class="red svelte-1ns5wom">start mismatch:</span>
    <table class="comparison svelte-1ns5wom">
      <tbody>
        <tr>
          <td class="svelte-1ns5wom">required:</td>
          <td class="svelte-1ns5wom">55</td>
        </tr>
        <tr>
          <td class="svelte-1ns5wom">actual:</td>
          <td class="svelte-1ns5wom">66</td>
        </tr>
      </tbody>
    </table>
  </li>
</ul>
"
`;

exports[`Schema > should render a sequence with wrong type 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myOnlyName
    <span class="red svelte-1ns5wom">type mismatch:</span>
    <table class="comparison svelte-1ns5wom">
      <tbody>
        <tr>
          <td class="svelte-1ns5wom">required:</td>
          <td class="svelte-1ns5wom">myType</td>
        </tr>
        <tr>
          <td class="svelte-1ns5wom">actual:</td>
          <td class="svelte-1ns5wom">myTypeX</td>
        </tr>
      </tbody>
    </table>
    55
  </li>
</ul>
"
`;

exports[`Schema > should render a table with an additional error 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a table with an additional error 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">additionalErrors1</li>
      <li class="svelte-1ns5wom">additionalErrors2</li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused NOT NULL column 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a unused NOT NULL column 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myColumn1Name
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused NOT NULL column 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">-</button> myColumn1Name
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label> myColumn1Type
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet yellow svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet yellow svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet yellow svelte-1ns5wom">+</button> myColumn1Name
        <span class="yellow svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 3`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet yellow svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet yellow svelte-1ns5wom">-</button> myColumn1Name
        <span class="yellow svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label> myColumn1Type
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 4`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE myTable1Name DROP COLUMN myColumn1Name",
</li>
"
`;

exports[`Schema > should render a unused column to be renamed to a missing 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTableName
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myUnusedColumnName
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte-1ns5wom">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
            <option value="myMissingColumnName2">myMissingColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myMissingColumnName
        <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte-1ns5wom">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button>
        myMissingColumnName2 <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte-1ns5wom">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column to be renamed to a missing 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTableName
    <ul>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myUnusedColumnName
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte-1ns5wom">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
            <option value="myMissingColumnName2">myMissingColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button> myMissingColumnName
        <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte-1ns5wom">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte-1ns5wom">
        <button class="bullet red svelte-1ns5wom">+</button>
        myMissingColumnName2 <span class="red svelte-1ns5wom">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte-1ns5wom">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column to be renamed to a missing 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myTableName\\" ALTER COLUMN \\"myUnusedColumnName\\" RENAME TO
  \\"myMissingColumnName\\"",
</li>
"
`;

exports[`Schema > should render a unused constraint 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a unused constraint 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">-</button> myTable1Name
    <ul>
      <li class="svelte-1ns5wom">
        <button disabled="" class="bullet red svelte-1ns5wom">.</button>
        <span class="nodeType svelte-1ns5wom">check</span> myConstraint1Name
        <span class="red svelte-1ns5wom">unused</span>
        <label><input type="checkbox" />drop</label> myConstraint1Clause
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused constraint 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE myTable1Name DROP CONSTRAINT myConstraint1Name",
</li>
"
`;

exports[`Schema > should render a unused sequence 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet yellow svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myOnlyName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label> myType 55
  </li>
</ul>
"
`;

exports[`Schema > should render a unused sequence 2`] = `
"<li class="svelte-1ns5wom">"DROP SEQUENCE myOnlyName",</li>
"
`;

exports[`Schema > should render a unused sequence to be renamed to a missing 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myUnusedSequenceName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
        <option value="myMissingSequenceName2">myMissingSequenceName2</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myMissingSequenceName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myMissingSequenceName2
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType 55
  </li>
</ul>
"
`;

exports[`Schema > should render a unused sequence to be renamed to a missing 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet yellow svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myUnusedSequenceName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
        <option value="myMissingSequenceName2">myMissingSequenceName2</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myMissingSequenceName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType 55
  </li>
  <li class="svelte-1ns5wom">
    <button disabled="" class="bullet red svelte-1ns5wom">.</button>
    <span class="nodeType svelte-1ns5wom">sequence</span> myMissingSequenceName2
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType 55
  </li>
</ul>
"
`;

exports[`Schema > should render a unused sequence to be renamed to a missing 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myUnusedSequenceName\\" RENAME TO \\"myMissingSequenceName\\"",
</li>
"
`;

exports[`Schema > should render a unused table 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet yellow svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myTable1Name
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet yellow svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">-</button> myTable1Name
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table 3`] = `
"<li class="svelte-1ns5wom">"DROP TABLE myTable1Name",</li>
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myUnusedTableName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
        <option value="myMissingTableName2">myMissingTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myMissingTableName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myMissingTableName2
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 2`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte-1ns5wom">
    <button class="bullet yellow svelte-1ns5wom">+</button> myUnusedTableName
    <span class="yellow svelte-1ns5wom">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte-1ns5wom">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
        <option value="myMissingTableName2">myMissingTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myMissingTableName
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
  <li class="svelte-1ns5wom">
    <button class="bullet red svelte-1ns5wom">+</button> myMissingTableName2
    <span class="red svelte-1ns5wom">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte-1ns5wom">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 3`] = `
"<li class="svelte-1ns5wom">
  "ALTER TABLE \\"myUnusedTableName\\" RENAME TO \\"myMissingTableName\\"",
</li>
"
`;

exports[`Schema > should render an empty schema 1`] = `
"<div class="checkboxCollector svelte-1ns5wom">
  <button disabled="" class="bullet svelte-1ns5wom">.</button> Schema
  <button class="reload svelte-dizlwz">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul></ul>
"
`;

exports[`Schema > should render an error message 1`] = `
"schema: response code 400 myError
"
`;

exports[`Schema > should render multiple missing nodes 1`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(0/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 2`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(1/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 3`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(2/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 4`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(3/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 5`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(4/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 6`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(5/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 7`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(0/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 8`] = `
"<button disabled="" class="bullet red svelte-1ns5wom">.</button> Schema
<button class="reload svelte-dizlwz">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(5/5)</small></label
><br />
"
`;
